; ModuleID = '/home/carl/AnghaBench/bitwise/ion/extr_resolve.c_resolve_expr_cast.c'
source_filename = "/home/carl/AnghaBench/bitwise/ion/extr_resolve.c_resolve_expr_cast.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i64, i32, %struct.TYPE_8__ }
%struct.TYPE_8__ = type { i32, i32 }
%struct.TYPE_9__ = type { i32* }

@EXPR_CAST = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [32 x i8] c"Invalid type cast from %s to %s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @resolve_expr_cast(%struct.TYPE_10__* %0) #0 {
  %2 = alloca %struct.TYPE_9__, align 8
  %3 = alloca %struct.TYPE_10__*, align 8
  %4 = alloca i32*, align 8
  store %struct.TYPE_10__* %0, %struct.TYPE_10__** %3, align 8
  %5 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = load i64, i64* @EXPR_CAST, align 8
  %9 = icmp eq i64 %7, %8
  %10 = zext i1 %9 to i32
  %11 = call i32 @assert(i32 %10)
  %12 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %13 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %12, i32 0, i32 2
  %14 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = call i32* @resolve_typespec(i32 %15)
  store i32* %16, i32** %4, align 8
  %17 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %18 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %17, i32 0, i32 2
  %19 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load i32*, i32** %4, align 8
  %22 = call i32* @resolve_expected_expr_rvalue(i32 %20, i32* %21)
  %23 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %2, i32 0, i32 0
  store i32* %22, i32** %23, align 8
  %24 = load i32*, i32** %4, align 8
  %25 = call i32 @cast_operand(%struct.TYPE_9__* %2, i32* %24)
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %37, label %27

27:                                               ; preds = %1
  %28 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %29 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %28, i32 0, i32 1
  %30 = load i32, i32* %29, align 8
  %31 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %2, i32 0, i32 0
  %32 = load i32*, i32** %31, align 8
  %33 = call i32 @get_type_name(i32* %32)
  %34 = load i32*, i32** %4, align 8
  %35 = call i32 @get_type_name(i32* %34)
  %36 = call i32 @fatal_error(i32 %30, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0), i32 %33, i32 %35)
  br label %37

37:                                               ; preds = %27, %1
  %38 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %2, i32 0, i32 0
  %39 = load i32*, i32** %38, align 8
  ret i32* %39
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32* @resolve_typespec(i32) #1

declare dso_local i32* @resolve_expected_expr_rvalue(i32, i32*) #1

declare dso_local i32 @cast_operand(%struct.TYPE_9__*, i32*) #1

declare dso_local i32 @fatal_error(i32, i8*, i32, i32) #1

declare dso_local i32 @get_type_name(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
